# spotidex

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  setup.py
spotidex/: __init__.py
spotidex/cli/: SpotidexApp.py  utils.py
spotidex/cli/app_screens/: DownloadInterface.py  MainMenuInterface.py  SearchInterface.py  SelectDownloadInterface.py  SettingsInterface.py
spotidex/cli/custom_widgets/: AppInterface.py  DownloadPathSelector.py  DownloadQualitySelection.py  MetadataCheckBox.py
spotidex/cli/popup_screens/: DownloadPathPopup.py  ExitScreenPopup.py  GoBackSettingsPopup.py  NetworkErrorPopup.py
spotidex/src/: content.py  download.py  static.py  utils.py
