[tool.poetry]
name = "spotidex"
version = "0.0.5"
description = "Spotify Downloader TUI"
authors = ["Libin Lalu <libinlalu000@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mutagen = "1.47.0"
requests = "2.31.0"
rich = "13.7.1"
spotipy = "2.23.0"
textual = "0.55.1"
tqdm = "4.66.1"
yt-dlp = "2024.3.10"
ytmusicapi = "1.3.2"

[tool.poetry.scripts]
my_script = "spotidex:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
