[tool.poetry]
name = "spotidex"
version = "1.0.0"
description = "Spotify Downloader TUI"
authors = ["Libin Lalu <libinlalu000@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/libin-codes/spotidex.git"
homepage = "https://github.com/libin-codes/spotidex"
keywords = ["spotify", "downloader", "spotidex", "music"]

[tool.poetry.dependencies]
python = "^3.8"
mutagen = "1.47.0"
requests = "2.31.0"
rich = "13.7.1"
spotipy = "2.23.0"
textual = "0.56.4"
tqdm = "4.66.1"
yt-dlp = "2024.3.10"
ytmusicapi = "1.3.2"
pyperclip = "1.8.2"

[tool.poetry.scripts]
spotidex = "spotidex:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
